<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.livk</groupId>
    <artifactId>spring-boot-extension-samples</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>spring-admin</module>
        <module>spring-authorization-server</module>
        <module>spring-batch</module>
        <module>spring-boot-web-scope</module>
        <module>spring-clickhouse</module>
        <module>spring-data-rest</module>
        <module>spring-doc</module>
        <module>spring-fastexcel-batch</module>
        <module>spring-graphql</module>
        <module>spring-hateoas</module>
        <module>spring-kafka</module>
        <module>spring-mail</module>
        <module>spring-micrometer-tracing</module>
        <module>spring-mybatis</module>
        <module>spring-netty</module>
        <module>spring-protobuf-mq</module>
        <module>spring-pulsar</module>
        <module>spring-r2dbc</module>
        <module>spring-rabbit</module>
        <module>spring-redis</module>
        <module>spring-rest-doc</module>
        <module>spring-retry</module>
        <module>spring-rsocket</module>
        <module>spring-security</module>
        <module>spring-server-sent-events</module>
        <module>spring-testcontainers-support</module>
        <module>spring-zookeeper</module>
        <module>spring-restful-version</module>
        <module>spring-grpc</module>
        <module>spring-mongodb</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>io.github.livk-cloud</groupId>
            <artifactId>spring-extension-commons</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-tracing-bridge-otel</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>io.github.livk-cloud</groupId>
            <artifactId>spring-auto-service</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure-processor</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.clickhouse</groupId>
                <artifactId>clickhouse-jdbc</artifactId>
                <version>0.9.2</version>
                <classifier>all</classifier>
            </dependency>

            <dependency>
                <groupId>com.clickhouse</groupId>
                <artifactId>clickhouse-r2dbc</artifactId>
                <version>0.9.2</version>
                <classifier>http</classifier>
            </dependency>

            <dependency>
                <groupId>io.github.livk-cloud</groupId>
                <artifactId>spring-extension-dependencies</artifactId>
                <version>1.5.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-dependencies</artifactId>
                <version>3.5.5</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-bom</artifactId>
                <version>2.8.13</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-bom</artifactId>
                <version>4.32.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>1.76.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.grpc</groupId>
                <artifactId>spring-grpc-dependencies</artifactId>
                <version>0.11.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>tencent-maven</id>
            <url>https://mirrors.tencent.com/nexus/repository/maven-public/</url>
        </repository>

        <repository>
            <id>sonatype-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <!-- 编译插件统一配置 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <!-- Java 版本 -->
                    <release>25</release>
                    <encoding>UTF-8</encoding>
                    <parameters>true</parameters>
                    <!-- 添加参数 -->
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>-Xlint:-options</arg>
                        <arg>-Xlint:varargs</arg>
                        <arg>-Xlint:rawtypes</arg>
                        <arg>-Xlint:deprecation</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                        <path>
                            <groupId>io.github.livk-cloud</groupId>
                            <artifactId>spring-auto-service</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.spring.javaformat</groupId>
                <artifactId>spring-javaformat-maven-plugin</artifactId>
                <version>0.0.47</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <inherited>true</inherited>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
